# sudoblark.ai.bookshelf-demo

./: .checkov.yaml  .flake8  .gitignore  .pre-commit-config.yaml  .yamllint  Makefile  README.md  pyproject.toml  requirements-dev.txt
.copilot/: instructions.md
.github/: readme-template.md
.github/workflows/: apply.yaml  destroy.yaml  pull-request.yaml
application/frontend/: index.html  package-lock.json  package.json  tsconfig.json
application/step_functions/: raw-to-enriched.asl.json
backend/: app.py  logger.py  parquet_reader.py  requirements.txt  routes.py  settings.py  utils.py
data/demo-images/: download_covers.sh
docs/: architecture.md  demo-execution.md  demo-setup.md
docs/adr/: 0001-bookshelf-storage-s3-query.md  0002-upload-pipeline-stages.md  0003-bedrock-model-selection.md  0004-coverage-pragma-no-cover.md  0005-upload-pipeline-stages.md
infrastructure/aws-sudoblark-development/: athena_workgroups.tf  data.tf  dynamodb.tf  glue_catalog_encryption.tf  glue_crawlers.tf  glue_databases.tf  glue_security_configuration.tf  iam.tf  lambda.tf  lambda_layer.tf  main.tf  notifications.tf  outputs.tf  s3.tf  step_functions.tf  variables.tf
lambda-packages/common/: data_lake.py  handler.py  response.py  s3.py  tracker.py
lambda-packages/file-router/: lambda_function.py
lambda-packages/landing-to-raw/: lambda_function.py  requirements-ci.txt  requirements.txt  scanner.py
lambda-packages/metadata-extractor/: README.md  bedrock_extractor.py  config.py  constants.py  lambda_function.py  models.py  parquet_writer.py  processor.py  requirements-ci.txt  requirements.txt
lambda-packages/unzip-processor/: README.md  lambda_function.py  requirements-ci.txt  requirements.txt
modules/data/: athena_workgroups.tf  buckets.tf  defaults.tf  dynamodb.tf  glue_crawlers.tf  (+9 more)
processor/: copilot_client.py  extractor.py  llm_client.py  logger.py  main.py  parquet_writer.py  requirements.txt  settings.py  utils.py  watcher.py
scripts/: build_lambdas.sh  bundle-lambdas.sh  read_parquet.py  requirements.txt  seed_books.csv  seed_books.sh
tests/: conftest.py  test_bookshelf.py  test_bookshelf_agent.py  test_common.py  test_file_router.py  test_landing_to_raw.py  test_metadata_extractor.py  test_ops.py  test_tracker.py  test_unzip_processor.py
user_interface/: pubspec.yaml
(+131 files in other folders)
